force-app/main/default/objects/Pricing_Response_Process_Quote_Line__mdt/Pricing_Response_Process_Quote_Line__mdt.object-meta.xml
<CustomObject>
    <description>SDT-40031-Created new metadata to exclude certain Service Charges being created as a result of Pricing Response update</description>
    <label>Pricing Response Process Quote Line</label>
    <pluralLabel>Pricing Response Process Quote Lines</pluralLabel>
</CustomObject>