force-app/main/default/objects/Pricing_Response_Process_Quote_Line__mdt/fields/Create_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Create_Quote_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Quote Line</label>
    <type>Checkbox</type>
</CustomField>