force-app/main/default/objects/Pricing_Response_Process_Quote_Line__mdt/fields/Delete_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Delete_Quote_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Quote Line</label>
    <type>Checkbox</type>
</CustomField>