force-app/main/default/objects/Pricing_Response_Process_Quote_Line__mdt/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <inlineHelpText>Values:
To include a value to be checked, it can be mentioned as IN(&apos;value1&apos;, &apos;value2&apos;, ...)
To exclude a value to be checked, it can be mentioned as NOT_IN(&apos;value1&apos;, &apos;value2&apos;, ...)</inlineHelpText>
    <label>Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>