force-app/main/default/objects/Pricing_Response_Process_Quote_Line__mdt/fields/Manually_Procured__c.field-meta.xml
<CustomField>
    <fullName>Manually_Procured__c</fullName>
    <label>Manually Procured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>