force-app/main/default/objects/Pricing_Response_Process_Quote_Line__mdt/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <label>Market Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Market</fullName>
                <default>true</default>
                <label>Open Market</label>
            </value>
            <value>
                <fullName>Closed Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>