force-app/main/default/objects/Pricing_Response_Process_Quote_Line__mdt/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
                <default>true</default>
                <label>Any</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Price Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>