force-app/main/default/objects/Pricing_Response_Process_Quote_Line__mdt/fields/Service_Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Name__c</fullName>
    <label>Service Charge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>