force-app/main/default/objects/Pricing_Response_Process_Quote_Line__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Service_Charge_Name__c</columns>
    <columns>Create_Quote_Line__c</columns>
    <columns>Update_Quote_Line__c</columns>
    <columns>Delete_Quote_Line__c</columns>
    <columns>Vendor_Type__c</columns>
    <columns>Market_Type__c</columns>
    <columns>Shipping_Country__c</columns>
    <columns>Parent_Account_Primary_Segment__c</columns>
    <columns>Equipment__c</columns>
    <columns>Price_Type__c</columns>
    <columns>Manually_Procured__c</columns>
    <columns>Quote_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>